Skip run "azd init". Run "azd up" directly.